Fixed book details alignment, tags display and filter button cursor:pointer on hover

--- a/src/Book/BookDetails/BookDetails.css
+++ b/src/Book/BookDetails/BookDetails.css
@@ -4,9 +4,9 @@
 }
 
 .book-details-row {
-    height: 59px;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .book-details-label {
